# Learnyst_Automation

./: .env  .replit  README.md  bot.py  browser_agent_runner.py  config.py  external_service_client.py  index.html  learnyst_automation.py  main.py  pyproject.toml  requirements.txt  requirements1.txt
attached_assets/: Pasted-I-am-selling-courses-in-Learnyst-but-for-everytime-i-have-to-give-access-ia-m-opening-my-laptop-an-1747180733965.txt  content-1747182540191.md
external_service/: .env  Dockerfile  README.md  docker-compose.yml  learnyst_automation.py  requirements.txt  server.py  setup.bat
static/css/: custom.css
templates/: base.html  index.html
